# testing

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CONTRIBUTING  CTestConfig.cmake  LICENSE  README.md  analyzer.py  install-mirgecom  mirge-test.sh  requirements.txt
.ci-support/: check-test-result.sh  get-package-testing-log.sh
.github/workflows/: ci.yaml  isolator-nightly-lassen.yaml  isolator-nightly-quartz.yaml  mirgecom-nightly-lassen.yaml  mirgecom-nightly-quartz.yaml  test.yaml
CMake/Modules/: FindCantera.cmake  FindPETSc.cmake
PyJuKe/: ABaTe.py  CheckTest.py  README.md  generate_parallel_suite_runner.py  generate_serial_suite_runner.py  generate_suite_runner.py  juke_stub.py  parjuke.py  profiler.py  pyjuke.sh  setup.py
PyTEESD/: CheckTest.py  README.md  abate.py  generate_parallel_suite_runner.py  generate_serial_suite_runner.py  generate_teesd_python_module.sh  setup.py  teesd_stub.py
Testing/: CMakeLists.txt  README  README.md  testdirectory.txt
Testing/Examples/: Example1.py
Testing/Parallel/: README.md  parallelsuites.txt
Testing/PostTest/: MakeComparisonPlots.py  MakeGrudgePlots.py  MakeStreamPlots.py  MakeZAXPYGridscalePlots.py  donetesting.sh  testlist.txt
Testing/PreTest/: get_mirgecom_examples.sh  testlist.txt  testsetup.sh
Testing/Serial/: serialsuites.txt
benchmarks/: asv.conf.json
doc/: CMakeLists.txt  Coding.dox  DeveloperReference.dox  Documentation.dox  GettingStarted.dox  JustKernels.cfg.in  Kernels.dox  Numerics.dox  PlasCom2.sty  TEESD.cfg.in  Testing.dox  TestingProject.dox  Theory.dox  UserReference.dox  WENO.dox  cleandocs  gendocs  groups.dox  main.dox  references.bib
doc/images/: DomainD_small.xcf
doc/tex/codeletdoc/: Makefile  codeletdoc.tex  lukasdoc.tex  references.bib
docs/html/: BareBonesKernels_8H.html  BareBonesKernels_8H.js  BareBonesKernels_8H__incl.dot  BareBonesKernels_8H__incl.md5  BareBonesKernels_8H_source.html  Coding_8dox.html  DeveloperReference_8dox.html  Documentation_8dox.html  EOS_8f90.html  EOS_8f90.js  EOS_8f90_source.html  EulerKernels_8H.html  EulerKernels_8H.js  EulerKernels_8H__incl.dot  EulerKernels_8H__incl.md5  EulerKernels_8H_source.html  Euler_8f90.html  Euler_8f90.js  Euler_8f90_source.html  GridKernels_8H.html  (+379 more)
include/: BareBonesKernels.H  EOS.H  EulerKernels.H  GridKernels.H  ImportHegelKernels.H  Kernels.H  MetricKernels.H  NSUtilKernels.H  OperatorKernels.H  RKKernels.H  RoeKernels.H  SATKernels.H  SimpleKernels.H  SpecialKernels.H  ViscidKernels.H  WENOKernels.H
kernels/: EOS.f90  Euler.f90  Grid.f90  Limits.f90  MetricOps.f90  NavierStokesRHSWENO.f90  NavierStokesUtil.f90  Operators.f90  Roe.f90  RungeKutta.f90  SATUtil.f90  Simple.f90  Special.f90  Viscid.f90  barebones.f90  zaxpy3.f90
lassen/: package_config_file  testing-latest-timestamp.txt  testing-log-isolator-lassen-2022.05.20-14.04.30.txt  testing-log-isolator-lassen-2022.05.20-14.28.18.txt  testing-log-isolator-lassen-2022.05.20-17.51.47.txt  testing-log-isolator-lassen-2022.05.21-07.52.04.txt  testing-log-isolator-lassen-2022.05.21-12.17.25.txt  testing-log-isolator-lassen-2022.05.21-20.53.35.txt  testing-log-isolator-lassen-2022.05.22-05.16.48.txt  testing-log-isolator-lassen-2022.05.23-04.51.06.txt  testing-log-isolator-lassen-2022.05.23-10.09.53.txt  testing-log-isolator-lassen-2022.05.26-10.49.35.txt  testing-log-isolator-lassen-2022.05.26-12.14.47.txt  testing-log-isolator-lassen-2022.05.26-13.36.33.txt  testing-log-isolator-lassen-2022.05.27-10.38.29.txt  testing-log-isolator-lassen-2022.05.27-13.41.03.txt  testing-log-isolator-lassen-2022.05.27-15.22.40.txt  testing-log-isolator-lassen-2022.06.03-00.18.59.txt  testing-log-isolator-lassen-2022.06.06-06.22.07.txt  testing-log-isolator-lassen-2022.06.07-04.35.09.txt  testing-log-isolator-lassen-2022.06.08-07.25.31.txt  testing-log-isolator-lassen-2022.06.15-06.01.13.txt  testing-log-isolator-lassen-2022.06.21-06.07.12.txt  testing-log-isolator-lassen-2022.07.12-08.22.08.txt  testing-log-lassen-2022.05.19-11.08.18.txt  testing-log-lassen-2022.05.19-12.37.02.txt  testing-log-lassen-2022.05.19-14.46.45.txt  testing-log-lassen-2022.05.20-03.08.56.txt  testing-log-mirgecom-lassen-2022.05.20-14.28.18.txt  testing-log-mirgecom-lassen-2022.05.20-17.51.47.txt  testing-log-mirgecom-lassen-2022.05.21-07.52.04.txt  testing-log-mirgecom-lassen-2022.05.21-12.17.25.txt  testing-log-mirgecom-lassen-2022.05.21-20.53.35.txt  testing-log-mirgecom-lassen-2022.05.22-05.16.48.txt  testing-log-mirgecom-lassen-2022.05.23-04.51.06.txt  testing-log-mirgecom-lassen-2022.05.23-10.09.53.txt  testing-log-mirgecom-lassen-2022.05.26-10.49.35.txt  testing-log-mirgecom-lassen-2022.05.26-12.14.47.txt  testing-log-mirgecom-lassen-2022.05.26-13.36.33.txt  testing-log-mirgecom-lassen-2022.05.27-10.38.29.txt  (+54 more)
quartz/: testing-latest-timestamp.txt  testing-log-isolator-quartz-2022.06.01-10.30.37.txt  testing-log-isolator-quartz-2022.06.01-13.37.22.txt  testing-log-isolator-quartz-2022.06.03-01.37.59.txt  testing-log-isolator-quartz-2022.06.06-06.25.32.txt  testing-log-isolator-quartz-2022.06.07-04.34.11.txt  testing-log-isolator-quartz-2022.06.08-07.00.01.txt  testing-log-mirgecom-quartz-2022.06.01-13.37.22.txt  testing-log-mirgecom-quartz-2022.06.03-01.37.59.txt  testing-log-mirgecom-quartz-2022.06.06-06.25.32.txt  testing-log-mirgecom-quartz-2022.06.07-04.34.11.txt  testing-log-mirgecom-quartz-2022.06.08-07.00.01.txt  testing-results-isolator-quartz-2022.06.01-10.30.37.txt  testing-results-isolator-quartz-2022.06.01-13.37.22.txt  testing-results-isolator-quartz-2022.06.03-01.37.59.txt  testing-results-isolator-quartz-2022.06.06-06.25.32.txt  testing-results-isolator-quartz-2022.06.07-04.34.11.txt  testing-results-isolator-quartz-2022.06.08-07.00.01.txt  testing-results-mirgecom-quartz-2022.06.01-13.37.22.txt  testing-results-mirgecom-quartz-2022.06.03-01.37.59.txt  testing-results-mirgecom-quartz-2022.06.06-06.25.32.txt  testing-results-mirgecom-quartz-2022.06.07-04.34.11.txt  testing-results-mirgecom-quartz-2022.06.08-07.00.01.txt
src/: EOS.C
utils/: CMakeLists.txt  EnabledSerialTests.txt
(+514 files in other folders)
